--- a/views/parts/footer.ejs
+++ b/views/parts/footer.ejs
@@ -1,4 +1,5 @@
 <script language="javascript" src="/javascripts/bootstrap.min.js"></script>
+<script language="javascript" src="/javascripts/scripts.js"></script>
 <footer>
     
 </footer>
