--- a/views/pages/news.ejs
+++ b/views/pages/news.ejs
@@ -50,8 +50,8 @@
                   </div>
                   <div class="col-md-1 col-sm-0"></div>
                   <div class="col col-md-4">
-                    <button data-toggle="modal" data-target="#newComment" class="btn btn-warning btn-sm d-block m-1"
-                      type="button">Ajouter un commentaire</button>
+                    <a data-toggle="modal" href="#staticBackdrop" class="btn btn-warning btn-sm d-block m-1"
+                      type="button">Ajouter un commentaire</a>
                   </div>
                   <div class="col-md-1 col-sm-0"></div>
                   <div class="col">
@@ -62,6 +62,35 @@
               </div>
             </div>
           </div>
+      </div>
+
+      <div class="modal fade" id="staticBackdrop" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <form action="/comment" method="POST">
+            <div class="modal-header">
+              <h5 class="modal-title" id="staticBackdropLabel">Ajouter un commentaire</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              
+              <input type="hidden" class="form-control" id="inputID" name="inputID" value="<%= news[i].id %>">
+
+              <label for="inputPrenom" class="col-form-label">Prénom</label>
+              <input type="text" class="form-control" id="inputPrenom" name="inputPrenom">
+              <label for="inputContent" class="col-form-label">Commentaire</label>
+              <textarea class="form-control" id="inputContent" rows="5" name="inputContent"></textarea>
+              
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-Dark" data-dismiss="modal">Fermer</button>
+              <button type="submit" class="btn btn-warning">Envoyer</button>
+            </div>
+          </form>
+          </div>
+        </div>
       </div>
 
       <% } } %>
@@ -92,25 +121,6 @@
           </div>
 
       </div>
-
-      <div class="modal" id="newComment" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              ...
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-          </div>
-        </div>
 
     </main>
     <%- include('../parts/footer');%>
